# MyWorkPlace

./: README.md  WORKSPACE
server/: BUILD  CMakeCache.txt  CMakeLists.txt  FlowPipe.thrift  FlowPipeHandler.cpp  FlowPipeHandler.h  Makefile  cmake_install.cmake  fake_server.py  fake_server.sh  main.cpp  start_server.sh
server/config/: DefaultConfig.json
server/gen-cpp/: BUILD  CMakeLists.txt  FlowPipe.cpp  FlowPipe.h  FlowPipe_constants.cpp  FlowPipe_constants.h  FlowPipe_server.skeleton.cpp  FlowPipe_types.cpp  FlowPipe_types.h  Makefile  cmake_install.cmake
server/lib/: BUILD  ThreadPool.cpp  ThreadPool.h
